vcs/kustomize/vcs/overlays/local/vcs/holder/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: holder-vcs
  labels:
    app: holder-vcs
spec:
  tls:
  - hosts:
      - HOLDER_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: HOLDER_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: HOLDER_SERVICE_NAME
            port:
              name: http
